fix(animation): resolve flickering issue on infinite-scroll for all breakpoints

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -14,15 +14,18 @@
 }
 
 @keyframes infinite-scroll {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-50%); /* move half (since we duplicated reviews) */
+  to {
+    transform: translateX(
+      calc(-50% - 1rem)
+    ); /* move half (since we duplicated reviews) */
   }
 }
 
 .animate-infinite-scroll {
-  display: flex;
-  animation: infinite-scroll 20s linear infinite;
+  /* display: flex; */
+  animation: infinite-scroll 5s linear infinite;
+}
+
+.animate-infinite-scroll:hover {
+  animation-play-state: paused;
 }
